Added calculate button to BMI calculator

--- a/app/src/main/res/layout/fragment_bmical.xml
+++ b/app/src/main/res/layout/fragment_bmical.xml
@@ -46,4 +46,12 @@
         android:id="@+id/textView14"
         android:layout_gravity="left|center_vertical"
         android:textColor="#ffffff" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Calculate"
+        android:id="@+id/button4"
+        android:layout_gravity="left|center_vertical" />
+
 </FrameLayout>
