Added title to points page and place to display the owners points

--- a/app/src/main/res/layout/fragment_points_page.xml
+++ b/app/src/main/res/layout/fragment_points_page.xml
@@ -17,12 +17,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="$$$$$$$$$$"
+        android:text="POINTS"
+        android:id="@+id/textView20"
+        android:layout_gravity="center_horizontal|top"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="You have:"
         android:id="@+id/textView5"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="121dp"
         android:background="#f4ffe3"
-        android:layout_gravity="center" />
+        android:layout_gravity="center_horizontal|top" />
 
 </FrameLayout>
