--- a/app/src/main/res/layout/fragment_bmical.xml
+++ b/app/src/main/res/layout/fragment_bmical.xml
@@ -17,7 +17,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="170dp"
-        android:text="Your BMI IS:"
+        android:text="BMI CALCULATOR"
         android:id="@+id/textView2"
         android:layout_gravity="center_horizontal|top"
         android:textColor="#fffef7" />
