--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -60,5 +60,14 @@
         android:layout_marginBottom="-75dp"
         android:layout_gravity="center" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Home Page"
+        android:id="@+id/textView27"
+        android:layout_gravity="center_horizontal|top"
+        android:textColor="#ffffff" />
+
 
 </FrameLayout>
