Strength Training Day 1 and 2

--- a/app/src/main/res/layout/fragment_body_building_one.xml
+++ b/app/src/main/res/layout/fragment_body_building_one.xml
@@ -9,8 +9,8 @@
     <!-- TODO: Update blank fragment layout -->
 
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="206dp"
+        android:layout_height="204dp"
         android:id="@+id/editText2"
         android:layout_gravity="center"
         android:text="
