--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,24 +8,8 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="66dp"
         android:text="New Text"
-        android:id="@+id/textView14"
-        android:layout_gravity="center"
-        android:background="#f0fff1" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView16"
-        android:layout_gravity="center_horizontal|bottom"
-        android:background="#c9ffda" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
+        android:id="@+id/textView22"
         android:layout_gravity="center_horizontal|top" />
 </FrameLayout>
