--- a/app/src/main/res/layout/fragment_strength_day3.xml
+++ b/app/src/main/res/layout/fragment_strength_day3.xml
@@ -1,6 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="edu.sc.myapplication.StrengthDay3">
+    android:layout_height="match_parent" tools:context="edu.sc.myapplication.StrengthDay3"
+    android:id="@+id/containerFitnessP"
+    android:background="@drawable/background2">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
