Added title to body building page 2

--- a/app/src/main/res/layout/fragment_body_building_two.xml
+++ b/app/src/main/res/layout/fragment_body_building_two.xml
@@ -95,4 +95,13 @@
         android:id="@+id/completeDay2"
         android:layout_gravity="center_horizontal|bottom" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="BODY BUILDING"
+        android:id="@+id/textView24"
+        android:layout_gravity="center_horizontal|top"
+        android:textColor="#ffffff" />
+
 </FrameLayout>
