--- a/app/src/main/res/layout/fragment_points_page.xml
+++ b/app/src/main/res/layout/fragment_points_page.xml
@@ -22,8 +22,15 @@
         android:layout_gravity="center_horizontal|top"
         android:textColor="#ffffff" />
 
+    <Button
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        android:id="@+id/button5"
+        android:layout_gravity="center_horizontal|bottom" />
+
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="112dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="You have:"
@@ -31,14 +38,25 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="121dp"
-        android:background="#f4ffe3"
-        android:layout_gravity="center_horizontal|top" />
+        android:background="#060605"
+        android:layout_gravity="left|top"
+        android:textColor="#ffffff" />
 
     <Button
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:text="Back"
-        android:id="@+id/button5"
-        android:layout_gravity="center_horizontal|bottom" />
+        android:layout_width="180dp"
+        android:layout_height="61dp"
+        android:text="Share on Twitter"
+        android:id="@+id/button9"
+        android:layout_gravity="left|center_vertical"
+        android:background="#1ae2ff"
+        android:textColor="#ffffff" />
+
+    <Button
+        android:layout_width="165dp"
+        android:layout_height="59dp"
+        android:text="Share on Facebook"
+        android:id="@+id/button6"
+        android:layout_gravity="right|center_vertical"
+        android:background="#167dff" />
 
 </FrameLayout>
