--- a/app/src/main/res/layout/fragment_strength_day3.xml
+++ b/app/src/main/res/layout/fragment_strength_day3.xml
@@ -8,4 +8,13 @@
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="STRENGTH DAY 3"
+        android:id="@+id/textView28"
+        android:layout_gravity="center_horizontal|top"
+        android:textColor="#ffffff" />
+
 </FrameLayout>
