Added headings to all the strength day pages and added heading to the progress tracking page

--- a/app/src/main/res/layout/fragment_track_progress.xml
+++ b/app/src/main/res/layout/fragment_track_progress.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Progress"
+        android:text="Progress Tracker"
         android:id="@+id/textView4"
         android:layout_gravity="center_horizontal|top"
         android:textColor="#ffffff" />
