--- a/app/src/main/res/layout/fragment_strength_day_one.xml
+++ b/app/src/main/res/layout/fragment_strength_day_one.xml
@@ -9,4 +9,13 @@
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="STRENGTH DAY 1"
+        android:id="@+id/textView31"
+        android:layout_gravity="center_horizontal|top"
+        android:textColor="#ffffff" />
+
 </FrameLayout>
