--- a/app/src/main/res/layout/fragment_strength_day_one.xml
+++ b/app/src/main/res/layout/fragment_strength_day_one.xml
@@ -11,12 +11,35 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="STRENGTH DAY 1"
-        android:id="@+id/textView31"
-        android:layout_gravity="center_horizontal|top"
-        android:textColor="#ffffff" />
+        android:text="Barbell Bench Press
+    - Hepburn Method"
+        android:id="@+id/benchText"
+        android:layout_gravity="left|center_vertical"
+        android:layout_marginBottom="175dp"
+        android:textColor="#ffffff"
+        android:textSize="22dp" />
+
+    <TextView
+        android:layout_width="234dp"
+        android:layout_height="34dp"
+        android:text="Incline Barbell Press"
+        android:layout_marginBottom="50dp"
+        android:id="@+id/benchDetail"
+        android:layout_gravity="left|center_vertical"
+        android:textColor="#ffffff"
+        android:textSize="22dp"/>
+
+    <TextView
+        android:layout_width="219dp"
+        android:layout_height="63dp"
+        android:text="Cable Flies"
+        android:id="@+id/flyText"
+        android:layout_gravity="bottom|center_vertical"
+        android:layout_marginBottom="150dp"
+        android:textColor="#ffffff"
+        android:textSize="25dp" />
 
     <ImageView
         android:layout_width="176dp"
@@ -26,11 +49,28 @@
         android:layout_marginBottom="150dp"
         android:src="@drawable/bench" />
     <ImageView
-        android:layout_width="126dp"
-        android:layout_height="126dp"
-        android:id="@+id/flyImage"
+        android:layout_width="179dp"
+        android:layout_height="179dp"
+        android:id="@+id/incline"
         android:layout_gravity="right|center_vertical"
         android:layout_marginBottom="35dp"
         android:src="@drawable/incline" />
+    <ImageView
+        android:layout_width="167dp"
+        android:layout_height="167dp"
+        android:id="@+id/pushupImage"
+        android:layout_gravity="right|bottom"
+        android:layout_marginBottom="70dp"
+        android:src="@drawable/flies" />
+
+    <TextView
+        android:layout_width="130dp"
+        android:layout_height="67dp"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Back"
+        android:id="@+id/textView31"
+        android:layout_gravity="center_horizontal|bottom"
+        android:background="#dcdada"
+        android:textSize="25dp" />
 
 </FrameLayout>
