Added Back Buttons and Page Navigation for Strength Training

--- a/app/src/main/res/layout/fragment_fitness_program.xml
+++ b/app/src/main/res/layout/fragment_fitness_program.xml
@@ -97,8 +97,8 @@
     <Button
         android:layout_width="130dp"
         android:layout_height="58dp"
-        android:text="Back"
-        android:id="@+id/button"
+        android:text="BACK"
+        android:id="@+id/FitProBack"
         android:layout_gravity="center_horizontal|bottom" />
 
 
