--- a/app/src/main/res/layout/fragment_max.xml
+++ b/app/src/main/res/layout/fragment_max.xml
@@ -44,4 +44,11 @@
         android:textColor="#ffffff"
         android:textSize="20dp"
         android:layout_marginTop="330dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BACK"
+        android:id="@+id/MaxBack"
+        android:layout_gravity="center_horizontal|bottom" />
 </FrameLayout>
