--- a/app/src/main/res/layout/fragment_track_progress.xml
+++ b/app/src/main/res/layout/fragment_track_progress.xml
@@ -13,4 +13,11 @@
         android:id="@+id/textView4"
         android:layout_gravity="center_horizontal|top"
         android:textColor="#ffffff" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BACK"
+        android:id="@+id/TPBack"
+        android:layout_gravity="center_horizontal|bottom" />
 </FrameLayout>
