--- a/app/src/main/res/layout/fragment_strength_day_two.xml
+++ b/app/src/main/res/layout/fragment_strength_day_two.xml
@@ -9,13 +9,61 @@
         android:text="@string/hello_blank_fragment" />
 
     <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="50dp"
+    android:textAppearance="?android:attr/textAppearanceLarge"
+    android:text="Barbell Squat
+ - Hepburn Method"
+    android:id="@+id/squat"
+    android:layout_gravity="left|center_vertical"
+    android:layout_marginBottom="175dp"
+    android:textColor="#ffffff"
+    android:textSize="22dp" />
+
+    <ImageView
+        android:layout_width="176dp"
+        android:layout_height="176dp"
+        android:id="@+id/imageView"
+        android:layout_gravity="right|top"
+        android:layout_marginBottom="150dp"
+        android:src="@drawable/squat" />
+
+    <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="STRENGTH DAY 2"
-        android:id="@+id/textView32"
-        android:layout_gravity="center_horizontal|top"
-        android:textColor="#ffffff" />
+        android:text="Leg Press"
+        android:id="@+id/legpress"
+        android:layout_gravity="left|center_vertical"
+        android:layout_marginBottom="20dp"
+        android:textColor="#ffffff"
+        android:textSize="22dp" />
+
+    <ImageView
+        android:layout_width="176dp"
+        android:layout_height="176dp"
+        android:id="@+id/legpresspic"
+        android:layout_gravity="right|center"
+        android:layout_marginBottom="10dp"
+        android:src="@drawable/legpress" />
+
+    <TextView
+        android:layout_width="219dp"
+        android:layout_height="63dp"
+        android:text="Calf Press"
+        android:id="@+id/flyText"
+        android:layout_gravity="bottom|center_vertical"
+        android:layout_marginBottom="100dp"
+        android:textColor="#ffffff"
+        android:textSize="25dp" />
+
+    <ImageView
+        android:layout_width="179dp"
+        android:layout_height="120dp"
+        android:id="@+id/calfpresspic"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="60dp"
+        android:src="@drawable/calfpress" />
 
     <Button
         android:layout_width="wrap_content"
