--- a/app/src/main/res/layout/fragment_body_building_two.xml
+++ b/app/src/main/res/layout/fragment_body_building_two.xml
@@ -20,7 +20,7 @@
     <TextView
         android:layout_width="234dp"
         android:layout_height="34dp"
-        android:text="4 Sets of 10-12 Repetitions. 1 minute rest between sets"
+        android:text="4 Sets of 10-12 Repetitions. (1 minute rest between sets)"
         android:layout_marginBottom="155dp"
         android:id="@+id/benchDetail"
         android:layout_gravity="left|center_vertical"
@@ -64,7 +64,7 @@
     <TextView
         android:layout_width="177dp"
         android:layout_height="34dp"
-        android:text="4 sets of 10-30 concentrated repetitions (Depending on skill level)"
+        android:text="4 sets of 10-30 concentrated repetitions (Depending on skill level)."
         android:id="@+id/pushupDetail"
         android:layout_gravity="left|bottom"
         android:layout_marginBottom="120dp"
@@ -73,7 +73,7 @@
     <TextView
         android:layout_width="132dp"
         android:layout_height="59dp"
-        android:text="Pushup"
+        android:text="Push-up"
         android:id="@+id/pushupText"
         android:layout_gravity="left|bottom"
         android:layout_marginBottom="125dp"
@@ -92,7 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Workout Complete!"
-        android:id="@+id/completeDay2"
+        android:id="@+id/completeDay2bb"
         android:layout_gravity="center_horizontal|bottom" />
 
     <TextView
