--- a/app/src/main/res/layout/fragment_strength_day3.xml
+++ b/app/src/main/res/layout/fragment_strength_day3.xml
@@ -10,12 +10,60 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="STRENGTH DAY 3"
-        android:id="@+id/textView28"
-        android:layout_gravity="center_horizontal|top"
-        android:textColor="#ffffff" />
+        android:text="Deadlift
+ - Hepburn Method"
+        android:id="@+id/squat"
+        android:layout_gravity="left|center_vertical"
+        android:layout_marginBottom="175dp"
+        android:textColor="#ffffff"
+        android:textSize="22dp" />
+
+    <ImageView
+        android:layout_width="176dp"
+        android:layout_height="176dp"
+        android:id="@+id/imageView"
+        android:layout_gravity="right|top"
+        android:layout_marginBottom="150dp"
+        android:src="@drawable/deadlift" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Dumbbell Rows"
+        android:id="@+id/dbrow"
+        android:layout_gravity="left|center_vertical"
+        android:layout_marginBottom="20dp"
+        android:textColor="#ffffff"
+        android:textSize="22dp" />
+
+    <ImageView
+        android:layout_width="176dp"
+        android:layout_height="176dp"
+        android:id="@+id/legpresspic"
+        android:layout_gravity="right|center"
+        android:layout_marginBottom="10dp"
+        android:src="@drawable/dbrow" />
+
+    <TextView
+        android:layout_width="219dp"
+        android:layout_height="63dp"
+        android:text="Barbell Shrugs"
+        android:id="@+id/shrug"
+        android:layout_gravity="bottom|center_vertical"
+        android:layout_marginBottom="100dp"
+        android:textColor="#ffffff"
+        android:textSize="25dp" />
+
+    <ImageView
+        android:layout_width="179dp"
+        android:layout_height="120dp"
+        android:id="@+id/shrugpic"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="60dp"
+        android:src="@drawable/shrug" />
 
     <Button
         android:layout_width="wrap_content"
