--- a/app/src/main/res/layout/fragment_body_building_day_three.xml
+++ b/app/src/main/res/layout/fragment_body_building_day_three.xml
@@ -3,10 +3,108 @@
     android:layout_height="match_parent" tools:context="edu.sc.myapplication.BodyBuildingDayThree"
     android:id="@+id/containerFitnessP"
     android:background="@drawable/background2"
+
     >
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Hammer Curl"
+        android:id="@+id/hammercurlText"
+        android:layout_gravity="left|center_vertical"
+        android:layout_marginBottom="175dp"
+        android:textColor="#ffffff"
+        android:textSize="25dp" />
+
+    <TextView
+        android:layout_width="234dp"
+        android:layout_height="34dp"
+        android:text="4 Sets of 10-12 Repetitions. "
+        android:layout_marginBottom="155dp"
+        android:id="@+id/hammerCurlDetail"
+        android:layout_gravity="left|center_vertical"
+        android:textColor="#ffffff" />
+
+    <ImageView
+        android:layout_width="141dp"
+        android:layout_height="121dp"
+        android:id="@+id/hammerCurlImage"
+        android:layout_gravity="right|top"
+        android:layout_marginBottom="120dp"
+
+        android:layout_marginTop="30dp"
+        android:src="@drawable/hammercurl" />
+
+    <TextView
+        android:layout_width="219dp"
+        android:layout_height="63dp"
+        android:text="Preacher Curl"
+        android:id="@+id/preacherCurlText"
+        android:layout_gravity="left|center_vertical"
+        android:layout_marginBottom="40dp"
+        android:textColor="#ffffff"
+        android:textSize="25dp" />
+
+    <ImageView
+        android:layout_width="126dp"
+        android:layout_height="126dp"
+        android:id="@+id/preacherCurlImage"
+        android:layout_gravity="right|center_vertical"
+        android:layout_marginBottom="35dp"
+        android:src="@drawable/preachercurl" />
+
+    <TextView
+        android:layout_width="206dp"
+        android:layout_height="49dp"
+        android:text="4 Sets of 10-12 repititions.  "
+        android:id="@+id/preacherCurlDetail"
+        android:layout_gravity="left|center_vertical"
+        android:layout_marginBottom="20dp"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:layout_width="177dp"
+        android:layout_height="58dp"
+        android:text="4 sets of 5-15 concentrated repetitions (Depending on skill level)."
+        android:id="@+id/closegripPushupDetail"
+        android:layout_gravity="left|bottom"
+        android:layout_marginBottom="90dp"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="59dp"
+        android:text="Close Grip Push-up"
+        android:id="@+id/closegripPushupText"
+        android:layout_gravity="left|bottom"
+        android:layout_marginBottom="125dp"
+        android:textColor="#ffffff"
+        android:textSize="25dp" />
+
+    <ImageView
+        android:layout_width="153dp"
+        android:layout_height="153dp"
+        android:id="@+id/closegrippushupImage"
+        android:layout_gravity="right|bottom"
+        android:layout_marginBottom="70dp"
+        android:src="@drawable/closegrippushup" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Workout Complete!"
+        android:id="@+id/completeDay3bb"
+        android:layout_gravity="center_horizontal|bottom" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="BODY BUILDING DAY 3"
+        android:id="@+id/bbDay3"
+        android:layout_gravity="center_horizontal|top"
+        android:textColor="#ffffff" />
 
 </FrameLayout>
